objects/Visitas__c.object
<CustomObject>
    <description>Visita de cliente</description>
    <fields>
        <fullName>Bairro__c</fullName>
        <formula>Conta__r.Revenue_Neighbourhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bairro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cidade__c</fullName>
        <formula>Conta__r.Revenue_City__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Work_Hour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Work Hour</label>
        <referenceTo>LAT_CWH_ClientWorkHour__c</referenceTo>
        <relationshipLabel>Visitas</relationshipLabel>
        <relationshipName>Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_AN8__c</fullName>
        <formula>Conta__r.Client_code_AN8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código do cliente AN8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conta_Visitas__c</fullName>
        <label>Conta Visitas</label>
        <summaryForeignKey>Checklist_de_visita__c.Visita__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_da_Visita__c</fullName>
        <label>Data da Visita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descrever_Motivo__c</fullName>
        <inlineHelpText>Descrever Motivo</inlineHelpText>
        <label>Descrever Motivo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dia_da_semana_Num_AR__c</fullName>
        <formula>MOD(Data_da_Visita__c - DATE(1900, 1, 7), 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dia da semana Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dia_da_semana__c</fullName>
        <formula>IF(RecordType.DeveloperName == &apos;BRA_Standard&apos;, 
       CASE(Dia_da_semana_Num_AR__c, 0, &quot;Domingo&quot;, 1, &quot;Segunda&quot;, 2, &quot;Terça&quot;, 3, &quot;Quarta&quot;, 4, &quot;Quinta&quot;, 5, &quot;Sexta&quot;, &quot;Sábado&quot;) ,
       IF( RecordType.DeveloperName == &apos;VTS_Standard_AR&apos; || RecordType.DeveloperName == &apos;VTS_Standard_UY&apos; ||    $RecordType.DeveloperName = &apos;LAT_MX_VTS_PlannedVisit&apos; || $RecordType.DeveloperName = &apos;LAT_MX_VTS_ClosedVisit&apos;|| $RecordType.DeveloperName = &apos;LAT_MX_VTS_ClosedVisitON&apos;|| $RecordType.DeveloperName = &apos;LAT_MX_VTS_PlannedVisitON&apos;, 
               CASE(Dia_da_semana_Num_AR__c, 0, &quot;Domingo&quot;, 1, &quot;Lunes&quot;, 2, &quot;Martes&quot;, 3, &quot;Miércoles&quot;, 4, &quot;Jueves&quot;, 5, &quot;Viernes&quot;, 6, &quot;Sábado&quot;,&quot;&quot;),
                &quot;&quot;
       )
)</formula>
        <label>Dia da semana</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hora_da_Visita__c</fullName>
        <label>Hora da Visita</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KAM10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KAM10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visitas9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KAM1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KAM1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KAM2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KAM2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visitas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Client__c</fullName>
        <description>Client Objectives on this visit</description>
        <label>Visit Objective - Client</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CommentsAboutVisitGoal__c</fullName>
        <label>BR Comments About Visit Goal</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CustomerAgreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BR CustomerAgreed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_DiscussedTopics__c</fullName>
        <label>BR Discussed Topics</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_BR_HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BR Has Attachment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_PRB__c</fullName>
        <description>PRB Objectives for this visit</description>
        <label>Visit Objective - PRB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_AddressNumber__c</fullName>
        <label>Address Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_BetweenStreets__c</fullName>
        <label>Between Streets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_City__c</fullName>
        <label>City MX</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ClienteChannel__c</fullName>
        <label>Client Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_County__c</fullName>
        <label>County</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_GoalAchieved__c</fullName>
        <description>This field is also used for Brasil since RFC 27737 - Academia de vendas (march 2014)</description>
        <label>Goal Achieved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partially</fullName>
                </value>
                <value>
                    <fullName>Not done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_MX_IsChecklistMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the visit needs to have created and filled checklist before it is closed.</description>
        <label>Checklist Obligatorio?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Neighbourhood__c</fullName>
        <label>Neighbourhood MX</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PedingChecklist__c</fullName>
        <label>Amount of pending checklist</label>
        <summaryFilterItems>
            <field>CLV_ChecklistVisita_ARG__c.LAT_MX_Result__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>CLV_ChecklistVisita_ARG__c.Visit_AR__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_State__c</fullName>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Type__c</fullName>
        <label>Type MX</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>LAT_MX_ClienteChannel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Activity Negotiation - On Trade</fullName>
                </value>
                <value>
                    <fullName>Activity Negotiation - Off Trade</fullName>
                </value>
                <value>
                    <fullName>Sales Negotiation</fullName>
                </value>
                <value>
                    <fullName>Follow Up - On Trade</fullName>
                </value>
                <value>
                    <fullName>Follow Up - Off Trade</fullName>
                </value>
                <value>
                    <fullName>Collections</fullName>
                </value>
                <value>
                    <fullName>Relationship - On Trade</fullName>
                </value>
                <value>
                    <fullName>Relationship - Off Trade</fullName>
                </value>
                <value>
                    <fullName>Prospecting - On Trade</fullName>
                </value>
                <value>
                    <fullName>Prospecting - Off Trade</fullName>
                </value>
                <value>
                    <fullName>Negociación - Catalogación</fullName>
                </value>
                <value>
                    <fullName>Negociación - Cuota de volumen</fullName>
                </value>
                <value>
                    <fullName>Negociación - Instrucción de Operación</fullName>
                </value>
                <value>
                    <fullName>Negociación - Seguimiento al plan</fullName>
                </value>
                <value>
                    <fullName>Negociación - Entrega de incentivos</fullName>
                </value>
                <value>
                    <fullName>Supervisar activaciones - Activación</fullName>
                </value>
                <value>
                    <fullName>Revisar visibilidad - Uniformes</fullName>
                </value>
                <value>
                    <fullName>Revisar visibilidad – Menú</fullName>
                </value>
                <value>
                    <fullName>Revisar visibilidad - Coctelería</fullName>
                </value>
                <value>
                    <fullName>Revisar visibilidad - Mantenimiento</fullName>
                </value>
                <value>
                    <fullName>Negociación - Catalogación Off</fullName>
                </value>
                <value>
                    <fullName>Negociación - Cuota de volumen Off</fullName>
                </value>
                <value>
                    <fullName>Negociación - Instrucción Operación Off</fullName>
                </value>
                <value>
                    <fullName>Negociación - Seguimiento al plan Off</fullName>
                </value>
                <value>
                    <fullName>Negociación - Entrega de incentivos Off</fullName>
                </value>
                <value>
                    <fullName>Supervisar activaciones - Activación Off</fullName>
                </value>
                <value>
                    <fullName>Revisar visibilidad - Uniformes Off</fullName>
                </value>
                <value>
                    <fullName>Revisar visibilidad – Menú Off</fullName>
                </value>
                <value>
                    <fullName>Revisar visibilidad - Coctelería Off</fullName>
                </value>
                <value>
                    <fullName>Revisar visibilidad - Mantenimiento Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Origin__c</fullName>
        <label>Creation Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APP</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_PreparedVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepared Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_isTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAT Is Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Motivo_de_n_o_visitar_report__c</fullName>
        <label>Motivo de não visitar report</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planejamento__c</fullName>
        <label>Planejamento</label>
        <referenceTo>Planejamento__c</referenceTo>
        <relationshipLabel>Visitas</relationshipLabel>
        <relationshipName>Visitas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Poss_veis_motivos__c</fullName>
        <label>Motivo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indisponibilidade do cliente</fullName>
                </value>
                <value>
                    <fullName>Pendências com a PRB</fullName>
                </value>
                <value>
                    <fullName>Cliente fora da rota proposta</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Defaulting client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resumo_da_Visita__c</fullName>
        <label>Action Plan / Visit Goal</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Semana__c</fullName>
        <formula>MOD(FLOOR( ( Data_da_Visita__c -DATEVALUE(text(year( Data_da_Visita__c))+&quot;-&quot;+text(month(Data_da_Visita__c))+ &quot;-01&quot; ))/7),52)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Semana</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Situacao_da_Visita__c</fullName>
        <formula>IF( AND(ISPICKVAL(Status__c, &quot;Encerrada&quot; ),  ISBLANK(TEXT(Poss_veis_motivos__c))),  $Label.VTS_00001_AR ,
 $Label.VTS_00002_AR )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situação da Visita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planejada</fullName>
                    <default>true</default>
                    <label>Planejada</label>
                </value>
                <value>
                    <fullName>Encerrada</fullName>
                </value>
                <value>
                    <fullName>Visit not made</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_do_Planejamento__c</fullName>
        <formula>Planejamento__r.Planning_Status_Translate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status do Planejamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Visita__c</fullName>
        <label>Tipo de Visita</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Execução</fullName>
                    <default>true</default>
                    <label>Execução</label>
                </value>
                <value>
                    <fullName>Vendas</fullName>
                </value>
                <value>
                    <fullName>Execução e Venda</fullName>
                </value>
                <value>
                    <fullName>Avaliação Execução</fullName>
                </value>
                <value>
                    <fullName>Contrato</fullName>
                </value>
                <value>
                    <fullName>Prospecção / Cadastro</fullName>
                </value>
                <value>
                    <fullName>Treinamento</fullName>
                </value>
                <value>
                    <fullName>Ativação promocional</fullName>
                </value>
                <value>
                    <fullName>Casa concorrente</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
                <value>
                    <fullName>Sale and Collection</fullName>
                </value>
                <value>
                    <fullName>Execution, Sale and Collection</fullName>
                </value>
                <value>
                    <fullName>Agreements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visita_n_o_realizada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marcar se a visita não foi ou não será realizada.</description>
        <inlineHelpText>Marcar se a visita não foi ou não será realizada.</inlineHelpText>
        <label>Não será Realizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ciente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trigger_on__c</fullName>
        <defaultValue>false</defaultValue>
        <label>trigger on</label>
        <type>Checkbox</type>
    </fields>
    <label>Visita</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Mexico</fullName>
        <columns>NAME</columns>
        <columns>Planejamento__c</columns>
        <columns>LAT_MX_ClienteChannel__c</columns>
        <columns>Conta__c</columns>
        <columns>LAT_MX_PedingChecklist__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Dia_da_semana__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Descrever_Motivo__c</columns>
        <columns>LAT_MX_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Situacao_da_Visita__c</columns>
        <columns>LAT_MX_State__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Visitas__c.LAT_MX_VTS_PlannedVisit,Visitas__c.LAT_MX_VTS_ClosedVisit</value>
        </filters>
        <label>Mexico Todas</label>
        <language>es_MX</language>
        <sharedTo>
            <roleAndSubordinates>MX_Presidente</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Visitas</fullName>
        <columns>Planejamento__c</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Status__c</columns>
        <columns>LAT_PreparedVisit__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Visitas__c.BRA_Standard</value>
        </filters>
        <filters>
            <field>Data_da_Visita__c</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2016</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Encerrada</value>
        </filters>
        <label>IT Visitas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Minhas_Visitas</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Semana__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>Planejamento__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Mine</filterScope>
        <label>Minhas Visitas</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Minhas_Visitas_Status_Encerrada</fullName>
        <columns>Planejamento__c</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Semana__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Encerrada</value>
        </filters>
        <label>Minhas Visitas - Status Encerrada</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Minhas_Visitas_Status_Planejada</fullName>
        <columns>Planejamento__c</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Semana__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planejada</value>
        </filters>
        <label>Minhas Visitas - Status Planejada</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Minhas_visitas_deste_m_s</fullName>
        <columns>Planejamento__c</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Semana__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Data_da_Visita__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Minhas visitas deste mês</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Minhas_visitas_nao_planejadas</fullName>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Status__c</columns>
        <columns>Poss_veis_motivos__c</columns>
        <columns>Status_do_Planejamento__c</columns>
        <columns>Tipo_de_Visita__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Semana__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Data_da_Visita__c</field>
            <operation>equals</operation>
        </filters>
        <label>Minhas visitas não planejadas</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Mis_visitas_de_este_mes</fullName>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Data_da_Visita__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Mis visitas de este mes</label>
        <language>pt_BR</language>
        <sharedTo>
            <roleAndSubordinates>AR_Director_Comercial</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todas_Visitas</fullName>
        <columns>Planejamento__c</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Semana__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todas Visitas</label>
    </listViews>
    <listViews>
        <fullName>Todas_Visitas_Status_Encerrada</fullName>
        <columns>Planejamento__c</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Semana__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Encerrada</value>
        </filters>
        <label>Todas Visitas - Status Encerrada</label>
    </listViews>
    <listViews>
        <fullName>Todas_Visitas_Status_Planejada</fullName>
        <columns>Planejamento__c</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Semana__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planejada</value>
        </filters>
        <label>Todas Visitas - Status Planejada</label>
    </listViews>
    <listViews>
        <fullName>Todas_las_visitas_de_este_mes</fullName>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_da_Visita__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Todas las visitas de este mes</label>
        <language>pt_BR</language>
        <sharedTo>
            <roleAndSubordinates>AR_Director_Comercial</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Todas_visitas_deste_mes</fullName>
        <columns>Planejamento__c</columns>
        <columns>NAME</columns>
        <columns>Conta__c</columns>
        <columns>Data_da_Visita__c</columns>
        <columns>Hora_da_Visita__c</columns>
        <columns>Semana__c</columns>
        <columns>Visita_n_o_realizada__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Resumo_da_Visita__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_da_Visita__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Todas visitas deste mês</label>
    </listViews>
    <nameField>
        <label>Nome da Visita</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visitas</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_VTS_ClosedVisit</fullName>
        <active>true</active>
        <label>MX Closed Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_VTS_ClosedVisitON</fullName>
        <active>true</active>
        <label>MX Closed Visit - On Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_VTS_PlannedVisit</fullName>
        <active>true</active>
        <label>MX Planned Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_MX_VTS_PlannedVisitON</fullName>
        <active>true</active>
        <label>MX Planned Visit - On Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>VTS_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>VTS_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_BR_VTS_VR01_VisitGoal</fullName>
        <active>false</active>
        <description>Force the user to complete the field “Objetivo da visita” (Resumo_da_Visita__c) when closing a visit</description>
        <errorConditionFormula>$RecordType.DeveloperName = &apos;BRA_Standard&apos;
&amp;&amp;
ISPICKVAL(Status__c, &apos;Encerrada&apos;) 
&amp;&amp;
ISBLANK(Resumo_da_Visita__c)
&amp;&amp;
LAT_isTrigger__c = false</errorConditionFormula>
        <errorDisplayField>Resumo_da_Visita__c</errorDisplayField>
        <errorMessage>Please, fill the visit goal before closing the visit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_BR_VTS_VR02_GoalAchieved</fullName>
        <active>true</active>
        <description>Force the user to complete the field “O Objetivo da visita foi alcançado?” (LAT_MX_GoalAchieved__c) when closing a visit</description>
        <errorConditionFormula>$RecordType.DeveloperName = &apos;BRA_Standard&apos;
&amp;&amp;
ISPICKVAL(Status__c, &apos;Encerrada&apos;) 
&amp;&amp;
ISPICKVAL(LAT_MX_GoalAchieved__c, &apos;&apos;)
&amp;&amp;
LAT_isTrigger__c = false
&amp;&amp;
!Visita_n_o_realizada__c</errorConditionFormula>
        <errorDisplayField>LAT_MX_GoalAchieved__c</errorDisplayField>
        <errorMessage>Please, fill the “Goal Achieved?” field before closing the visit</errorMessage>
    </validationRules>
</CustomObject>